[workspace]
members = [
	"customvmcpu-json"
]

[package]
name = "rust-customvmcpu"
version = "0.1.0"
authors = ["Fionn Langhans <fionn.langhans@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcustomvmcpu = { path = "./libcustomvmcpu" }

[[example]]
name = "compiler"

[[example]]
name = "exampleprogramwriter"

[[example]]
name = "interpreter"
